--- a/tasks/templates/add_task.html
+++ b/tasks/templates/add_task.html
@@ -3,6 +3,16 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<div class="container">
+    <form method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ form|crispy }}
+        {{ photo_form|crispy }}
+        <button type="submit" class="btn btn-primary">Create Task</button>
+    </form>
+    
+</div>
+
 
 
 {% endblock content %}
