--- a/tasks/templates/task_list.html
+++ b/tasks/templates/task_list.html
@@ -1,8 +1,67 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<h1>Task List</h1>
+<div class="container">
+    <!-- Task List Search Bar -->
+    <div class="mb-3 mt-5">
+      <form id="task-search-form" method="post">
+        {% csrf_token %}
+          <div class="input-group">
+             <input type="text" class="form-control" id="search-input" required placeholder="Search tasks">
+              <div class="input-group-append">
+                  <button class="btn btn-outline-info ml-2" type="button" id="search-button">Search</button>
+              </div>
+          </div>
+      </form>
+  </div>
+  <!-- Display Tasks in a Table -->
+  <h2>Task List</h2>
+  <div class="table-responsive">
+      <table class="table table-striped table-bordered">
+          <thead class="bg-info">
+              <tr>
+                
+                  <th>Title</th>
+                  <th>Description</th>
+                  <th>Due Date</th>
+                  <th>Priority</th>
+                  <th>Completed</th> <!-- Add a new header for the Completed status -->
+                  <th>Actions</th>
+              </tr>
+          </thead>
+          <tbody>
+              {% for task in object_list %}
+              <tr>
+                <td class="clickable-row" data-href="{% url 'task_detail' task.id %}">{{ task.title }}</td>
+                <td class="clickable-row" data-href="{% url 'task_detail' task.id %}">{{ task.description }}</td>
+                <td class="clickable-row" data-href="{% url 'task_detail' task.id %}">{{ task.due_date }}</td>
+                <td>{{ task.priority }}</td>
+                <td><input type="checkbox" {% if task.completed %}checked{% endif %} disabled></td>
+                <td>
+                    <div class="d-flex">
+                        <a href="#" class="btn btn-success mr-2">Edit</a> 
+                        <a href="#" class="btn btn-danger">Delete</a>
+                    </div>
+                </td>
+            </tr>
+              {% endfor %}
+          </tbody>
+      </table>
+  </div>
+</div>
 
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        var rows = document.querySelectorAll(".clickable-row");
+    
+        rows.forEach(function (row) {
+            row.addEventListener("click", function () {
+                var url = this.getAttribute("data-href");
+                window.location.href = url;
+            });
+        });
+    });
+    </script>
 
 {% endblock content %}
 
