--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link text-white" href="/dash-board/">Add Task<span
+          <a class="nav-link text-white" href="{% url "create_task" %}">Add Task<span
                   class="sr-only">(current)</span></a>
         </li>
       </ul>
