--- a/tasks/templates/update_task.html
+++ b/tasks/templates/update_task.html
@@ -1,2 +1,28 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
+{% block content %}
+
+
+<div class="container">
+    <div class="row mt-5">
+        <div class="col-md-12 offset-md-0">
+            <div class="border bg-white p-3">
+                <h2>Update Task</h2>
+                <hr>
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form|crispy }}
+                    {{ photo_form|crispy }}
+                    <button type="submit" class="btn btn-primary">Update Task</button>
+                </form>
+                
+             
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+{% endblock content %}
