--- a/tasks/templates/add_task.html
+++ b/tasks/templates/add_task.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% block title  %} Add Task {% endblock title  %}
 {% block content %}
 
 {% comment %} <div class="container">
