--- a/tasks/templates/login.html
+++ b/tasks/templates/login.html
@@ -1,30 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
+{% block title  %} Login {% endblock title  %}
 {% block content %}
 {% load crispy_forms_tags %}
-{% comment %} <div class="container">
-    <div class="row mt-5">
-        <div class="col-md-6 offset-md-3">
-            
-            <div class="border bg-white p-3">
-                <h2> Log In</h2>
-                <hr>
-                <form method='POST'>
-                    {% csrf_token %}
-                    
 
-<div id="div_id_username" class="mb-3"> <label for="id_username" class="form-label requiredField">
-            Username<span class="asteriskField">*</span> </label> <input type="text" name="username" autofocus autocapitalize="none" autocomplete="username" maxlength="150" class="textinput form-control" required id="id_username"> </div> <div id="div_id_password" class="mb-3"> <label for="id_password" class="form-label requiredField">
-            Password<span class="asteriskField">*</span> </label> <input type="password" name="password" autocomplete="current-password" class="passwordinput form-control" required id="id_password"> </div>
-
-                    <input class="btn btn-success" type='submit' value='Log In'>
-                    <a href="{% url "password_reset" %}">Forget Password</a>
-                    
-                </form>
-            </div>
-        </div>
-    </div>
-</div> {% endcomment %}
 
 <div class="container">
     <div class="row mt-5">
