--- a/tasks/templates/register.html
+++ b/tasks/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% block title  %} Registration {% endblock title  %}
 
 {% block content %}
 <div class="container">
