--- a/tasks/templates/task_list.html
+++ b/tasks/templates/task_list.html
@@ -1,26 +1,49 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title  %} Task List {% endblock title  %}
+
 {% block content %}
+{% load crispy_forms_tags %}
 
 <div class="container">
-    <form method="get" class="mb-3 mt-5">
+   
+    <div class="container mt-4">
+        <form method="get" action="{% url 'task_list' %}">
+            <div class="row">
+                <div class="col-md-10 mb-0">
+                    <input type="text" name="q" id="search-input" class="form-control w-100" placeholder="Search by title">
+                </div>
+                <div class="col-md-2 mb-0">
+                    <button type="submit" class="btn btn-info btn-block">Search</button>
+                </div>
+            </div>
+        </form>
+    </div>
+    
+    
+    
+    
+    
+
+
+
+    <form method="get" class="mb-0 mt-5">
         <div class="row align-items-center">
             <div class="col-md-2">
                 <div class="form-group">
-                   
-                    {{ filter.form.title }}
+                    {{ filter.form.created_at.label_tag }}
+                    {{ filter.form.created_at }}
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    
+                    {{ filter.form.due_date.label_tag }}
                     {{ filter.form.due_date }}
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                  
+                    {{ filter.form.priority.label_tag }}
                     {{ filter.form.priority }}
                 </div>
             </div>
@@ -29,8 +52,8 @@
                     {{ filter.form.completed }}
                 </div>
             </div>
-            <div class="col-md-2">
-                <button type="submit" class="btn btn-primary">Apply Filters</button>
+            <div class="col-md-2 mt-2">
+                <button type="submit" class="btn btn-info">Apply Filters</button>
             </div>
         </div>
     </form>
